subnets.tf
resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidr
    map_public_ip_on_launch = true

tags = {
    Name = "${var.project_name}-public-subnet"
    }
}

resource "aws_subnet" "private" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnet_cidr

    tags = {
        Name = "${var.project_name}-private-subnet"
    }
}
